fixed body margin on mobile

--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,6 @@ body{
     list-style: none;
     flex:1;
     margin-top: 10%;
-    
-
 }
 #header li:active{
     color:bisque;
@@ -91,7 +89,6 @@ body{
     z-index: 1;
     flex:1;
     padding:1%; 
-    margin-right: 10%;
 }
 .modal-page{
     display:none;
@@ -312,6 +309,7 @@ button:active{
     }
     #modal-flex{
         padding:1%;
+        margin-right:15%;
         justify-content: center;
         flex:1
     }
